--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
       <!-- section hero 1-->
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
