--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card">Mark Guerrero</h3>
-              <p class="team-list-profession">Product Designer</p>
+              <div class="team-card-cointainer">
+                <h3 class="team-card">Mark Guerrero</h3>
+                <p class="team-list-profession">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -126,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card">Tom Ford</h3>
-              <p class="team-list-profession">Frontend Developer</p>
+              <div class="team-card-cointainer">
+                <h3 class="team-card">Tom Ford</h3>
+                <p class="team-list-profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -137,8 +141,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card">Camila Garcia</h3>
-              <p class="team-list-profession">Marketing</p>
+              <div class="team-card-cointainer">
+                <h3 class="team-card">Camila Garcia</h3>
+                <p class="team-list-profession">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card">Daniel Wilson</h3>
-              <p class="team-list-profession">UI Designer</p>
+              <div class="team-card-cointainer">
+                <h3 class="team-card">Daniel Wilson</h3>
+                <p class="team-list-profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
